<resources>
    <string name="app_name">Product App</string>
    <string name="action_search">Search product</string>
    <string name="action_settings">Language settings</string>

    <string name="english_code">EN</string>

    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>

    <string name="rupee_symbol">र</string>

    <string name="helveticaneueetpro_45lt">HelveticaNeueETPro-45Lt.ttf</string>
    <string name="helveticaneueetpro_65md">HelveticaNeueETPro-65Md.ttf</string>
    <string name="helveticaneueetpro_75bd">HelveticaNeueETPro-75Bd.ttf</string>
</resources>
