<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lnrRow"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="?attr/selectableItemBackground">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imgProduct"
            android:layout_width="@dimen/image_small_dimen"
            android:layout_height="@dimen/image_small_dimen"
            android:contentDescription="@string/app_name"
            android:layout_margin="@dimen/padding"
            android:src="@mipmap/ic_launcher"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">
            <com.agro.star.dhara.productapp.customviews.CustomTextView
                android:id="@+id/txtProductName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="left"
                android:text="@string/app_name"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/normal_size"
                app:fontName_TextView="@string/helveticaneueetpro_65md"/>
            <com.dhara.augment.test.customviews.CustomTextView
                android:id="@+id/txtDescription"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="left"
                android:text="@string/app_name"
                android:maxLines="2"
                android:ellipsize="end"
                android:textColor="@color/colorLightGray"
                android:textSize="@dimen/small_size"
                app:fontName_TextView="@string/helveticaneueetpro_45lt"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/colorDivider" />
</LinearLayout>