<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlackFaded">
    <LinearLayout
        android:id="@+id/lnrHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.agro.star.dhara.productapp.customviews.CustomTextView
            android:id="@+id/txtHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/action_settings"
            android:layout_alignParentTop="true"
            style="@style/ProductApp.TitleTextStyle" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorDivider"/>
    </LinearLayout>
    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@color/colorDivider"
        android:dividerHeight="1px"
        android:layout_below="@+id/lnrHeader"
        android:layout_above="@+id/lnrFooter"/>
    <LinearLayout
        android:id="@+id/lnrFooter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorDivider"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnOK"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/ok"
                android:background="@android:color/transparent"
                style="@style/ProductApp.NormalTextStyle"/>
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/colorDivider"/>
            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/cancel"
                android:background="@android:color/transparent"
                style="@style/ProductApp.NormalTextStyle"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>